--- a/.github/workflows/code-scan.yml
+++ b/.github/workflows/code-scan.yml
@@ -11,33 +11,72 @@ permissions:
   security-events: write
   actions: read
 
-jobs:
-  # 🚧 REPLACE THE JOB SECTION WITH WORKSHOP CONTENT! 🚧
-  # Copy from: workshop/code_scan/sast/{tool}/workflow.yml 
-  sast-scan:
-    name: "🚧 SAST Scan - Placeholder"
-    runs-on: ubuntu-latest
-    outputs:
-      result: ${{ steps.placeholder.outputs.result }}
-    steps:
-      - name: Workshop Placeholder
-        id: placeholder
-        run: |
-          echo "🚧 Replace this job with content from workshop/code_scan/sast/{tool}/workflow.yml!"
-          echo "This will implement: SAST scan with your chosen tool"
-          echo "result=workshop-placeholder" >> "$GITHUB_OUTPUT"
+# =============================================================================
+# SEMGREP CODE SCAN JOB
+# =============================================================================
+#
+# Semgrep is a fast pattern-based security scanner with extensive rule sets
+# Repository: https://github.com/semgrep/semgrep
+#
+# TO USE THIS JOB:
+# 1. Copy this entire job definition into .github/workflows/code-scan.yml
+# 2. Replace the current jobs: definition with this one
+# 3. The job will automatically scan all code in the code/ directory
+# 4. The scan will fail if vulnerabilities are found
+# =============================================================================
 
-  # 🚧 REPLACE THE JOB SECTION WITH WORKSHOP CONTENT! 🚧
-  # Copy from: workshop/code_scan/sca/{tool}/workflow.yml
-  sca-scan:
-    name: "🚧 SCA Scan - Placeholder"
+jobs:
+  semgrep-scan:
+    name: Semgrep Community Scan
     runs-on: ubuntu-latest
     outputs:
-      result: ${{ steps.placeholder.outputs.result }}
+      result: ${{ steps.scan-result.outputs.result }}
     steps:
-      - name: Workshop Placeholder
-        id: placeholder
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Install Semgrep Community Edition
+        run: pip install semgrep
+
+      - name: Run Semgrep Security Scan
+        id: semgrep-tool
         run: |
-          echo "🚧 Replace this job with content from workshop/code_scan/sca/{tool}/workflow.yml!"
-          echo "This will implement: SCA scan with your chosen tool"
-          echo "result=workshop-placeholder" >> "$GITHUB_OUTPUT"
+          semgrep \
+            --config=p/security-audit \
+            --config=p/secrets \
+            --config=p/javascript \
+            --config=p/owasp-top-ten \
+            --error \
+            --sarif \
+            --output=semgrep-results.sarif \
+            ./code/ || echo "SEMGREP_EXIT_CODE=$?" >> "$GITHUB_ENV"
+
+      - name: Upload Semgrep SARIF
+        uses: github/codeql-action/upload-sarif@f1f6e5f6af878fb37288ce1c627459e94dbf7d01 # v3.30.1
+        with:
+          sarif_file: semgrep-results.sarif
+          category: semgrep
+        if: always()
+
+      - name: Set scan result
+        id: scan-result
+        if: always()
+        run: |
+          # Semgrep exit codes: 0=no findings, 1=findings found, 2+=error
+          if [ "${{ steps.semgrep-tool.outcome }}" == "success" ] && [ -z "$SEMGREP_EXIT_CODE" ]; then
+            echo "result=success" >> "$GITHUB_OUTPUT"
+            echo "✅ Semgrep scan passed - no vulnerabilities found"
+          elif [ "$SEMGREP_EXIT_CODE" == "1" ] || [ "${{ steps.semgrep-tool.outcome }}" == "failure" ]; then
+            echo "result=failure" >> "$GITHUB_OUTPUT"
+            echo "❌ Semgrep scan failed - vulnerabilities detected"
+            if [ "${{ github.event_name }}" == "pull_request" ]; then
+              echo "🔍 View findings: https://github.com/${{ github.repository }}/security/code-scanning?query=pr%3A${{ github.event.number }}+is%3Aopen"
+            else
+              echo "🔍 View findings: https://github.com/${{ github.repository }}/security/code-scanning"
+            fi
+            exit 1
+          else
+            echo "result=failure" >> "$GITHUB_OUTPUT"
+            echo "❌ Semgrep scan encountered an error"
+            exit 1
+          fi
